--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
   <body>
   		<%= render 'layouts/nav' %>
       <%= bootstrap_flash %>
-  <div class="container">		
-    <%= yield %>
+  <div class="container">	
+    <div class="col-md-6">
+        <%= yield %>
+    </div>
   </div>
   </body>
 </html>
