--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -12,13 +12,17 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
+    <ul class="navbar-form navbar-right">
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+    </ul>    
     
-      <form class="navbar-form navbar-right">
+      <ul class="navbar-form navbar-right">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      </ul>
       <ul class="nav navbar-nav navbar-right">
           <% if !current_user %>
            <li><%= link_to "Sign Up", new_user_registration_path %></li>
