--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Wiki System</title>
     <%= csrf_meta_tags %>
 
@@ -11,10 +13,8 @@
   <body>
   		<%= render 'layouts/nav' %>
       <%= bootstrap_flash %>
-  <div class="container">	
-    <div class="col-md-6">
-        <%= yield %>
+    <div class="container">	
+      <%= yield %>
     </div>
-  </div>
   </body>
 </html>
