added article section

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<header>
+        <div id="index" class="jumobotron text-center">
+            <div class="header-content">
+                <div class="header-content-inner">
+                    <h1>Wiki System! Create new articles and contribute coding languages. All languages are stored by category</h1>
+                    <h2> Sign up your account and start adding articles! </h2>
+            	</div>
+            </div>
+        </div>
+</header>
+
