--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,1 +1,15 @@
-<h1> This is the article placeholder </h1>
+
+<h1> Articles </h1>
+
+<% @articles.each do |article|  %>
+  <h2>
+    <%= link_to article.title, article %>
+  </h2>
+  <p>
+    Published at
+    <%= article.created_at .strftime('%b %d, %Y') %>
+  </p>
+  <p>
+    <%= truncate(article.content, length: 200) %>
+  </p>
+<% end %>
