--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -28,6 +28,7 @@
            <li><%= link_to "Sign Up", new_user_registration_path %></li>
            <li><%= link_to "Sign in", new_user_session_path %></li>
           <% else %>
+           <li><%= link_to "Create Article", new_article_path %></li> 
            <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
            <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
           </ul>
