--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,7 +3,7 @@
             <div class="header-content">
                 <div class="header-content-inner">
                     <h1>Wiki System! Create new articles and contribute coding languages. All languages are stored by category</h1>
-                    <h2> Sign up your account and start adding articles! </h2>
+                    <h2> <%= link_to 'Sign up', new_user_registration_path %> for an account and start adding articles! </h2>
             	</div>
             </div>
         </div>
